objects/vlocity_ins__CompiledAttributeOverride__c.object
<CustomObject>
    <description>A compiled attribute override defines the attribute JSON representation for a given product, net of all attribute overrides. Attribute overrides can be defined when a child product is added as a component of a parent product. System object - do not manually insert or update directly.</description>
    <fields>
        <fullName>vlocity_ins__AttributeDefaultValues__c</fullName>
        <label>Attribute Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeMetadataChanges__c</fullName>
        <label>Attribute Metadata Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeMetadata__c</fullName>
        <label>Attribute Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeRules__c</fullName>
        <label>Attribute Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <description>JSON body containing the compiled Vlocity Attribute value data after all overrides have been applied.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Child Item</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Compiled Attribute Override</relationshipLabel>
        <relationshipName>Compiled_Attribute_Override</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Offer product which is the subject of this Compiled Attribute Override.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Compiled Attribute Overrides</relationshipLabel>
        <relationshipName>CompiledAttributeOverrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Compiled Attribute Override</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compiled Attribute Override</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>